@@ -46,11 +46,9 @@ sub new {
   ## Process each feature definition
   foreach my $feature (@$features) {
     my($status, $warn) = $self->parse_line(undef, $feature);
-    if (!$status) {
-      ## We only want to warn the user about problems
-      ## with the -feature option.
-      $self->warning("-features parameter: $warn");
-    }
+    ## We only want to warn the user about problems
+    ## with the -feature option.
+    $self->warning("-features parameter: $warn") if (!$status);
   }
 
   return $self;
